# hog3d-1

./: CMakeLists.txt  package.xml
src/: FastHog3DComputer.cpp
src/ffpp/: Codec.cpp  CodecContext.cpp  FlipContext.cpp  FormatContext.cpp  Frame.cpp  Frame.cpp~  InputFormat.cpp  InputFormatContext.cpp
src/opencv/: IplImageWrapper.cpp  Video.cpp  functions.cpp
