<?xml version="1.0"?>
<package>
  <name>hog3d</name>
  <version>0.0.0</version>
  <description>The hog3d package</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <author email="alexander.klaser@inrialpes.fr">Alexander Klaeser</author>
  <url type="web">http://lear.inrialpes.fr/~klaeser/research_hog3d</url>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
